# elph

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  Makefile  NOTICE.md  README.md  TOOLS_DEMO.txt  go.mod  go.sum  install.sh  netlify.toml  riset-topik-2026.md  rust-toolchain.toml  rustfmt.toml
crates/elph-agent/: Cargo.toml  README.md
crates/elph-agent/docs/: agent-harness.md  durable-harness.md  hooks.md  models.md  observability.md  prompt-encoding.md  skills.md  tools.md
crates/elph-agent/examples/: agent_coding_tools.rs  agent_coding_workflow.rs  agent_collaboration.rs  agent_compaction.rs  agent_compaction_full.rs  agent_events.rs  agent_filesystem_tools.rs  agent_goals.rs  agent_harness.rs  agent_hooks.rs  agent_init.rs  agent_list_tools.rs  agent_mcp_config.rs  agent_messages.rs  agent_multi_turn.rs  agent_search_tools.rs  agent_session.rs  agent_skill_math.rs  agent_skills.rs  agent_steering.rs  agent_subagent.rs  agent_tools.rs  agent_web_tools.rs  basic_agent.rs  default_mcp_deepwiki.rs  default_no_tools.rs  default_tool_call.rs  encrypt_string.rs  faux_agent.rs  mcp_deepwiki.rs  opencode_big_pickle_agent.rs  toon_mcp_deepwiki.rs  toon_no_tools.rs  toon_tool_call.rs
crates/elph-agent/src/: builder.rs  event_stream.rs  lib.rs
crates/elph-agent/tests/: agent.rs  agent_loop.rs  compaction.rs  e2e.rs  env.rs  goals.rs  harness.rs  harness_stream.rs  mcp_deepwiki.rs  messages.rs  plan_mode.rs  plugins.rs  prompt_encoding.rs  prompt_templates.rs  repo.rs  resource_formatting.rs  serde_roundtrip.rs  session.rs  session_uuid.rs  skills.rs  storage.rs  subagent.rs  system_prompt.rs  tools_fff.rs  tracing_http.rs  truncate.rs  web_tools.rs
crates/elph-agent/wit/: extension.wit
crates/elph-cron/: Cargo.toml  README.md
crates/floppy/: CHANGELOG.md  Cargo.toml  README.md
crates/floppy/src/: embed.rs  report.rs  util.rs
eclaw/: Cargo.toml  Cross.toml  README.md
eclaw/src/: main.rs
eclaw/src/cli/: default.rs  mod.rs  version.rs
eclaw/src/cmd/: default.rs  mod.rs
eclaw/src/layout/: bundled.rs  datastore.rs  mod.rs  paths.rs  settings.rs  trust.rs  version.rs
eclaw/src/logger/: mod.rs  rotation.rs
eclaw/src/runtime/: app.rs  mod.rs  paths.rs
eclaw/src/server/: config.rs  error.rs  middleware.rs  mod.rs  router.rs  web_assets.rs
eclaw/tests/: cli.rs  smoke.rs
eclaw/web/: index.html
elph/: Cargo.toml  Cross.toml  README.md
elph/src/: app.rs  lib.rs  main.rs  tui.rs  types.rs
elph/src/agent/: ask_user.rs  diagnostics.rs  events.rs  mcp_bootstrap.rs  mod.rs  model_registry.rs  overlays.rs  provider.rs  resource_loader.rs  run_mode.rs  runtime.rs  session_manager.rs  skills_load.rs  slash_commands.rs  system_prompt.rs  tool_policy.rs
elph/src/cli/: acp.rs  codegraph.rs  completions.rs  default.rs  doctor.rs  export.rs  extensions.rs  help.rs  import.rs  mcp.rs  memory.rs  mod.rs  models.rs  plugin.rs  provider.rs  run.rs  server.rs  session.rs  stats.rs  update.rs  version.rs  worktree.rs
elph/src/cmd/: acp.rs  codegraph.rs  completions.rs  default.rs  doctor.rs  export.rs  help.rs  import.rs  mcp.rs  memory.rs  mod.rs  models.rs  plugin.rs  provider.rs  run.rs  server.rs  session.rs  stats.rs  version.rs  worktree.rs
elph/src/coding_agent/: events.rs  mod.rs  model_registry.rs  resource_loader.rs  run_mode.rs  runtime.rs  session.rs  session_manager.rs  slash_commands.rs
elph/src/extensions/: mod.rs
elph/src/layout/: datastore.rs  mod.rs
elph/src/logger/: crash.rs  mod.rs  rotation.rs
elph/src/memory/: cmd.rs  format.rs  mod.rs  store.rs
elph/src/platform/: acp.rs  app.rs  bootstrap.rs  exit_message.rs  mcp.rs  migrations.rs  mod.rs  paths.rs  project.rs  settings.rs
elph/src/runtime/: app.rs  bundled.rs  datastore.rs  exit_message.rs  interrupt.rs  layout.rs  migrations.rs  mod.rs  paths.rs  project.rs  settings.rs
elph/src/scaffold/: bundled.rs  trust.rs  version.rs
elph/src/shell/: app.rs  events.rs  input.rs  mod.rs  overlays.rs  render.rs  shell_host.rs  slash.rs  transcript_render.rs  turn.rs
elph/src/tui/: activity.rs  agent_bridge.rs  api_error_display.rs  bridge.rs  chrome.rs  dispatch.rs  editor.rs  focus.rs  footer.rs  header.rs  labels.rs  mod.rs  model_selector.rs  model_selector_bar.rs  model_selector_shell.rs  prompt_chrome.rs  session_prefs.rs  shell.rs  slash_handler.rs  startup.rs  status_dialog.rs  status_row.rs  subagent_display.rs  theme.rs  tool_approval.rs  tool_params.rs  transcript_loader.rs  user_question.rs
elph/src/ui/: app.rs
elph/src/utils/: mod.rs
elph/templates/agent/: coding_base.md  mode_build.md
elph/tests/: bootstrap.rs  cli.rs  shell_host.rs  shell_transcript.rs  sigint.rs
extensions/say-hello/: Cargo.toml  README.md  extension.toml
extensions/say-hello/src/: bindings.rs  lib.rs
owly/: Cargo.toml  README.md
owly/examples/: owly-update.bitbucket-pipelines.yml  owly-update.gitlab-ci.yml  owly-update.yml
owly/scripts/: e2e_cli.sh
owly/src/: agent.rs  ask_user.rs  checkpoint.rs  cli.rs  cli_product.rs  code_mode.rs  commands.rs  config.rs  constants.rs  credentials.rs  docs.rs  ecosystem.rs  env.rs  ingestion.rs  instructions.rs  interactive.rs  lib.rs  main.rs  metadata.rs  mode.rs  onboarding.rs  onboarding_config.rs  prompts.rs  schedules.rs  session.rs  startup.rs  ui_events.rs
owly/src/agent/: commands.rs  listeners.rs  mod.rs  model.rs  run.rs  shared_models.rs  tools.rs
owly/src/ask_user/: bridge.rs  mod.rs
owly/src/auth/: configure.rs  mod.rs
owly/src/commands/: doc_run.rs  mod.rs  non_interactive.rs
owly/src/connectors/: async_util.rs  git_repo.rs  hackernews.rs  io.rs  mod.rs  registry.rs  types.rs  web_search.rs  x_source.rs
owly/src/constants/: mod.rs  providers.rs  resolve.rs
owly/src/credentials/: oauth_callbacks.rs
owly/tests/: agent_test.rs  checkpoint_test.rs  cli_e2e_test.rs  config_test.rs  constants_test.rs  credentials_test.rs  docs_test.rs  env_ext_test.rs  env_test.rs  onboarding_test.rs  personal_mode_test.rs  prompts_test.rs  tui_transcript_test.rs
(+1365 files in other folders)
