[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Internal dependencies
elph-agent = { path = "crates/agent", version = "0.0.1" }
elph-ai = { path = "crates/ai", version = "0.0.1" }
elph-tui = { path = "crates/tui", version = "0.0.1" }

# External dependencies
chrono = { version = "0.4.45", features = ["serde"] }
iocraft = "0.8.3"
nix = { version = "0.31", default-features = false, features = ["signal", "process"] }
smol = "2.0.2"
