[workspace]
resolver = "2"
members = [
    "crates/agent",
    "crates/ai",
    "crates/tui",
    "eclaw",
    "elph",
]

[workspace.dependencies]
agent-client-protocol = "1.0.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
cuid2 = "0.1.6"
fff-search = "0.9.6"
iocraft = "0.8.3"
nix = { version = "0.31", default-features = false, features = ["signal", "process"] }
rmcp = { version = "2.1.0", features = ["auth", "client"] }
signal-hook = "0.4.4"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "sync", "macros", "time"] }

[profile.release]
opt-level = 2        # Optimization level: 2 = balanced runtime perf vs compile time
lto = "thin"         # Thin LTO: cross-crate inlining without full-program analysis cost
codegen-units = 16   # Parallel codegen: 16 units = faster compile, minimal optimization loss
panic = "abort"      # panic=abort: removes unwind tables — smaller binary, cannot catch panics
strip = "symbols"    # Strip all symbols from final binary
debug = false        # No debug symbols in release

[profile.dev]
incremental = true   # Incremental: rebuild only changed code — much faster iteration
debug = "limited"    # Limited debug info: line numbers only, no type/variable debug

[workspace.metadata.cross]
target.x86_64-unknown-linux-gnu = { image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main" }
target.aarch64-unknown-linux-gnu = { image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main" }
