[package]
name = "eclaw"
version = "0.0.8"
license = "MIT"
description = "Personal AI assistant powered by Elph"
repository = "https://github.com/riipandi/elph"
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[[bin]]
name = "eclaw"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elph-agent = { path = "../crates/agent", version = "0.0.8" }
