[package]
name = "owly"
version = "0.0.6"
license = "Apache-2.0"
description = "AI agent CLI that writes and maintains documentation for your codebase"
keywords = ["ai", "documentation", "wiki", "agent", "cli"]
categories = ["development-tools", "command-line-utilities"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "owly"
path = "src/lib.rs"

[[bin]]
name = "owly"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
dialoguer.workspace = true
dirs.workspace = true
elph-agent.workspace = true
elph-ai.workspace = true
indicatif.workspace = true
memchr.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["form", "query"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
tracing-subscriber.workspace = true
tracing.workspace = true
turso.workspace = true
walkdir.workspace = true
yaml-front-matter.workspace = true

[dev-dependencies]
parking_lot.workspace = true
tempfile.workspace = true
