[package]
name = "elph-agent"
version = "0.0.22"
license = "MIT"
description = "Agent runtime for Elph coding assistant"
keywords = ["agent", "runtime", "ai", "coding", "elph"]
categories = ["development-tools", "asynchronous"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_agent"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
bytes = "1"
elph-ai.workspace = true
elph-core.workspace = true
fff-search.workspace = true
futures = "0.3"
ignore = "0.4"
indicatif.workspace = true
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tempfile = "3.27.0"
time.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
turso.workspace = true
uuid = { version = "1", features = ["v7"] }

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "opencode_big_pickle_agent"
path = "examples/opencode_big_pickle_agent.rs"

[dev-dependencies]
elph-ai = { workspace = true }
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7"] }
