[package]
name = "elph-cron"
version = "0.0.1"
license = "MIT"
description = "Cron scheduled task tools for Elph"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_cron"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
memorable-ids.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
linker_messages = "allow"
