[package]
name = "elph-extension-say-hello"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36.0"

[package.metadata.component]
package = "elph:extension-say-hello"

[package.metadata.component.target]
path = "../../crates/elph-agent/wit/extension.wit"
world = "guest"